--- a/noonno/resource/css/common.css
+++ b/noonno/resource/css/common.css
@@ -1,10 +1,184 @@
 
 .wrap .content {
-    min-width: 1280px;
+    max-width: 1280px;
     padding: 0 50px;
     margin:0 auto;
 }
 .wrap .footer {
     min-width: 1280px;
     background: #333;
+}
+
+
+
+
+
+
+/* 서브페이지 정렬 */
+.inner {
+    margin: 60px 0;
+    padding:0 50px;
+}
+
+/* 게시판 타이틀, 검색바 */
+h2.sub-tit {
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 53px;
+}
+
+.board-search form {
+    width: 380px;
+    height: 30px;
+    margin: 0 auto;
+    position: relative;
+}
+.board-search form input{
+    width:100%;
+    height:100%;
+    padding-bottom:6px;
+    border-bottom: 2px solid #333;
+    box-sizing: border-box;
+    font-size: 18px;
+    letter-spacing: -1px;
+    outline: 0;
+}
+.board-search form input:focus {
+    border-bottom: 2px solid #ED1C24;
+}
+.board-search form button.btn-search {
+    position: absolute;
+    right:0;
+    top: 3px;
+    width: 15px;
+    height:16px;
+    background:url(../../resource/img/common/sub_search_icon.png);
+    text-indent: -99999px;
+}
+.board-wrap{
+    margin: 28px 0 100px;
+}
+.board-wrap p.total-num{
+    color:#333;
+}
+.board-wrap p.total-num span{
+    color: #ED1C24;
+    font-weight: 500;
+}
+
+.board-wrap .board-box.board-gallery{
+    margin-top:20px;
+}
+.board-wrap .board-box.board-gallery::after{
+    content:'';
+    display:block;
+    clear: both;
+}
+.board-box.board-gallery li{
+    display:inline-block;
+    float:left;
+    width:560px;
+    margin-right:60px;
+    margin-bottom:40px;
+}
+.board-box.board-gallery li:nth-child(even){
+    margin-right:0;
+}
+.board-box.board-gallery li .board{
+    display:block;
+}
+.board-box.board-gallery li .board .thumb{
+    width:100%;
+    max-height:228px;
+    overflow:hidden;
+    border-radius: 0 0 50px 0;
+}
+.board-box.board-gallery li .board .thumb img{
+    display:block;
+    max-width:100%;
+}
+.board-box.board-gallery li .board .info{
+    padding:25px 20px 0;
+}
+.board-box.board-gallery li .board .info .board-tit{
+    font-size:22px;
+    font-weight: 700;
+    margin-bottom: 15px;
+    color:#333;
+    font-family: 'Noto Sans KR', sans-serif;
+}
+.board-box.board-gallery li .board .info .br-cate,
+.board-box.board-gallery li .board .info .date{
+    display:inline-block;
+    font-size: 16px;
+    font-weight: 400;
+    color:#333;
+}
+.board-box.board-gallery li .board .info .br-cate{
+    padding-right:15px;
+    border-right:1px solid #e5e5e5;
+    box-sizing: border-box;
+}
+.board-box.board-gallery li .board .info .date{
+    margin-left:15px;
+}
+
+
+
+/* 페이징*/
+.paging-box{
+    text-align: center;
+    font-size: 0;
+}
+.paging-box li{
+    display:inline-block;
+    line-height: 30px;
+    box-sizing: border-box;
+}
+.paging-box li a{
+    display:block;
+    font-size: 16px;
+    font-family: Poppins;
+}
+.paging-box .prev, .paging-box .next, .paging-box .first, .paging-box .last{
+    text-indent: -9999px;
+    width:27px;
+    height: 27px;
+    background-repeat: no-repeat;
+    background-position:center;
+}
+.paging-box .first{
+    background-image:url(../../resource/img/common/pag_first.png);
+    background-size: 14px;
+    margin-right:10px;
+}
+.paging-box .last{
+    background-image:url(../../resource/img/common/pag_last.png);
+    background-size: 14px;
+    margin-left:10px;
+}
+.paging-box .prev{
+    background-image:url(../../resource/img/common/pag_prev.png);
+    background-size: 7px;
+    margin-right:26px;
+}
+.paging-box .next{
+    background-image:url(../../resource/img/common/pag_next.png);
+    background-size: 7px;
+    margin-left:26px
+}
+.paging-box .number{
+    width:30px;
+    height:30px;
+    margin:0 4px;
+}
+.paging.paging-type-a .paging-box .number.active{
+    border-radius: 50%;
+    color:#fff;
+    background:#3B302F
+}
+.paging.paging-type-b .paging-box .number.active{
+    color:#ED1C24;
+    font-weight: 500;
+    
 }
