--- a/noonno/resource/css/common.css
+++ b/noonno/resource/css/common.css
@@ -55,6 +55,8 @@ h2.sub-tit {
     background:url(../../resource/img/common/sub_search_icon.png);
     text-indent: -99999px;
 }
+
+/* 게시판 리스트 */
 .board-wrap{
     margin: 28px 0 100px;
 }
@@ -123,6 +125,71 @@ h2.sub-tit {
     margin-left:15px;
 }
 
+/* 게시판 보기 */
+.board-view .br-view-top .share {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.board-view .br-view-top {
+    position: relative;
+    height: 28px;
+}
+
+.board-view .br-view-top .share a {
+    display: block;
+}
+
+.board-view .br-view-top .share a img {
+    height: 28px;
+}
+
+.board-view .br-view-top p {
+    text-align: center;
+    line-height: 28px;
+    font-size: 16px;
+}
+.board-view .br-view-top .br-cate{
+    padding-right:15px;
+    border-right:1px solid #e5e5e5;
+    box-sizing: border-box;
+}
+.board-view .br-view-top .date{
+    margin-left:15px;
+}
+.br-view-cont {
+    margin-top: 53px;
+    box-sizing: border-box;
+}
+.br-view-cont.notimg{
+    border-top: 2px solid #666;
+}
+.br-view-cont .textbox {
+    width:780px;
+    margin:60px auto 0
+}
+.br-view-cont .textbox p{
+    font-size: 18px;
+    line-height:35px;
+    letter-spacing:-2px;
+}
+.backbtn{
+    text-align:center;
+    margin-top:60px;
+}
+.backbtn .listback {
+    padding: 17px 54px;
+    border: 1px solid;
+    display: inline-block;
+    color: #333;
+    box-sizing: border-box;
+    border-radius: 30px;
+}
+.backbtn .listback:hover {
+    color: #ED1C24;
+    transition: all .2s ease-in-out;
+}
 
 
 /* 페이징*/
