--- a/noonno/resource/css/common.css
+++ b/noonno/resource/css/common.css
@@ -88,12 +88,14 @@ h2.sub-tit {
 }
 .board-box.board-gallery li .board{
     display:block;
+    position: relative;
 }
 .board-box.board-gallery li .board .thumb{
     width:100%;
     max-height:228px;
     overflow:hidden;
     border-radius: 0 0 50px 0;
+    position: relative;
 }
 .board-box.board-gallery li .board .thumb img{
     display:block;
@@ -125,6 +127,36 @@ h2.sub-tit {
     margin-left:15px;
 }
 
+/* 이벤트페이지 마우스 이벤트 등 */
+.board-box .thumb .mousehover{
+    position: absolute;
+    width:100%;
+    height:100%;
+    top:0;
+    left:0;
+    background:#3b302f;
+    opacity:90%;
+    color:#fff;
+    align-items: center;
+    display:flex;
+    visibility: hidden;
+}
+.board-box .thumb .mousehover.on{
+    opacity:90%;
+    visibility: visible;
+}
+.board-box .thumb .mousehover .aiignbox {
+    flex: 1;
+    width: 100%;
+    text-align: center;
+}
+.board-box .thumb .mousehover .aiignbox .mouseho-tit{
+    font-size: 30px;
+    margin-bottom:15px
+}
+.board-box .thumb .mousehover .aiignbox  .mouseho-txt{
+    font-size: 17px;
+}
 /* 게시판 보기 */
 .board-view .br-view-top .share {
     position: absolute;
