--- a/noonno/resource/css/common_kim.css
+++ b/noonno/resource/css/common_kim.css
@@ -1,46 +1,534 @@
-*{position:relative; box-sizing:border-box;}
-.blind{font-size:0px;}
-.wrap .footer .foot_top + .foot_bottom{border-top:1px solid #666;}
-.wrap .footer .foot_top{padding:40px 0; display:flex; align-items: center; margin:0 auto; width:1280px;}
-.wrap .footer .foot_top .search_teach ul li{color:#fff; font-weight:700; font-size:32px;}
-.wrap .footer .foot_top .search_teach{flex:1;}
-.wrap .footer .foot_top .search_teach ul{display:flex; align-items: center}
-.wrap .footer .foot_top .search_teach ul li a{color:#fff; font-weight:400; font-size:24px; line-height:32px;}
-.wrap .footer .foot_top .search_teach ul li + li{margin-left:45px;}
-.wrap .footer .foot_top .search_teach ul li + li:before{content:''; display:inline-block; width:5px; height:5px; background:#666; border-radius:5px; position:absolute; top:50%; transform:translateY(-50%); left:-22px; }
-.wrap .footer .foot_top .search_teach ul li:first-child + li{margin-left:80px;}
-.wrap .footer .foot_top .search_teach ul li:first-child + li:before{content:''; display:inline-block; width:40px; height:1px; background:#8a8d8f; position:absolute; top:50%; transform:translateY(-50%); left:-60px;}
-.wrap .footer .foot_sns ul{display:flex; align-items: center;}
-.wrap .footer .foot_sns ul > li + li{margin-left:40px;}
-.wrap .footer .foot_sns ul > li a.youtube{width:31px; height:22px; display:block;  background:url(../img/common/youtube.png);}
-.wrap .footer .foot_sns ul > li a.blog{width:31px; height:26px; display:block;  background:url(../img/common/naverBlog.png);}
-.wrap .footer .foot_sns ul > li a.insta{width:26px; height:26px; display:block;
- background:url(../img/common/instargram.png);}
-.gnb_wrap{min-width:1280px; position:fixed; width:100%; z-index:100;}
-.gnb_wrap .gnb_top{padding:10px 80px; }
-.gnb_wrap .gnb_top:after{clear:both; display:block; content:'';}
-.gnb_wrap .gnb_top ul{display:flex; align-content: center; float:right;}
-.gnb_wrap .gnb_top ul li + li {margin-left:15px;}
-.gnb_wrap .gnb_top ul li a{font-size:14px; color:#666; font-weight:400;}
-.gnb_wrap .gnb_top ul li + li:before{content:''; display:inline-block; width:2px; height:2px; background:#666; border-radius:5px; position:absolute; left:-8px; top:5px;}
-.gnb_wrap .gnb_top ul li a.point01{color:#ED1C24; font-weight:600;}
-.gnb_wrap .gnb_bottom{border-top:1px solid #eee; padding:30px 80px; display:flex; align-items: center; }
-.gnb_wrap .gnb_bottom.on:after{width:100%; height:250px; background:#FAFAFA; content:''; display:block; position:absolute; bottom:-250px; left:0; z-index:-1; }
-.depth_02 {position:absolute; top:70px; display:none; width:100%;}
-.depth_02 > li{line-height:45px;}
-.depth_02 > li > a{font-size:16px; color: #3B302F; border-bottom:1px solid #FAFAFA; letter-spacing:-2px; }
-.depth_02 > li > a:hover{border-bottom:1px solid #3B302F;}
-.gnb{flex:1; text-align:center;}
-.gnb > ul{display:inline-block;}
-.gnb > ul > li{float:left;}
-.gnb > ul > li > a{font-size:18px; font-weight:600; color: #3B302F; padding:0 20px;}
-.gnb > ul > li > a .olympiad{color:#B7976B; padding-left:42px; display:inline-block;}
-.gnb > ul > li > a .olympiad:before{content:''; display:inline-block; width:30px; height:24px; background:url(../img/common/ic_olympiad.png); position:absolute; left:0; top:-3px;}
-.gnb > ul > li + li{margin-left:20px;}
-.gnb > ul > li:last-child > a:after{content:''; display:inline-block; width:180px; height:14px; background:#f8eee2;
-border-radius:300px; position:absolute; bottom:-3px; left:20px; z-index:-1;}
-.gnb > ul > li:last-child > ul > li > a{color:#B7976B;}
-.gnb > ul > li:last-child > ul > li > a:hover{border-bottom:1px solid #B7976B;}
-.gnb > ul:after{clear:both; display:block; content:''; }
-.right_menu ul{display:flex; align-content: center;}
-.right_menu > ul > li + li{margin-left:40px;}
+* {
+    position: relative;
+    box-sizing: border-box;
+}
+.blind {
+    font-size: 0;
+}
+
+/* footer */
+.wrap .footer .foot_top + .foot_bottom {
+    border-top: 1px solid #666;
+}
+.wrap .footer .foot_top {
+    display: flex;
+    width: 1280px;
+    margin: 0 auto;
+    padding: 40px 0;
+
+    align-items: center;
+}
+.wrap .footer .foot_top .search_teach ul li {
+    font-size: 32px;
+    font-weight: 700;
+    color: #fff;
+}
+.wrap .footer .foot_top .search_teach {
+    flex: 1;
+}
+.wrap .footer .foot_top .search_teach ul {
+    display: flex;
+
+    align-items: center;
+}
+.wrap .footer .foot_top .search_teach ul li a {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    color: #fff;
+}
+.wrap .footer .foot_top .search_teach ul li a:hover {
+    border-bottom: 1px solid #fff;
+}
+.wrap .footer .foot_top .search_teach ul li + li {
+    margin-left: 45px;
+}
+.wrap .footer .foot_top .search_teach ul li + li:before {
+    position: absolute;
+    top: 50%;
+    left: -22px;
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    content: '';
+    transform: translateY(-50%);
+    border-radius: 5px;
+    background: #666;
+}
+.wrap .footer .foot_top .search_teach ul li:first-child + li {
+    margin-left: 80px;
+}
+.wrap .footer .foot_top .search_teach ul li:first-child + li:before {
+    position: absolute;
+    top: 50%;
+    left: -60px;
+    display: inline-block;
+    width: 40px;
+    height: 1px;
+    content: '';
+    transform: translateY(-50%);
+    background: #8a8d8f;
+}
+.wrap .footer .foot_sns ul {
+    display: flex;
+
+    align-items: center;
+}
+.wrap .footer .foot_sns ul > li + li {
+    margin-left: 40px;
+}
+.wrap .footer .foot_sns ul > li a.youtube {
+    display: block;
+    width: 31px;
+    height: 22px;
+    background: url(../img/common/youtube.png);
+}
+.wrap .footer .foot_sns ul > li a.youtube:hover {
+    background: url(../img/common/youtube_w.png);
+}
+.wrap .footer .foot_sns ul > li a.blog {
+    display: block;
+    width: 31px;
+    height: 26px;
+    background: url(../img/common/naverBlog.png);
+}
+.wrap .footer .foot_sns ul > li a.blog:hover {
+    background: url(../img/common/naverBlog_w.png);
+}
+.wrap .footer .foot_sns ul > li a.insta {
+    display: block;
+    width: 26px;
+    height: 26px;
+    background: url(../img/common/instargram.png);
+}
+.wrap .footer .foot_sns ul > li a.insta:hover {
+    background: url(../img/common/instargram_w.png);
+}
+.wrap .footer .foot_bottom {
+    padding: 50px 0 80px 0;
+    text-align: center;
+}
+.wrap .footer .foot_bottom .f_link {
+    margin-top: 40px;
+}
+.wrap .footer .foot_bottom .f_link ul li {
+    display: inline-block;
+}
+.wrap .footer .foot_bottom .f_link ul li + li {
+    margin-left: 20px;
+}
+.wrap .footer .foot_bottom .f_link ul li a {
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+}
+.wrap .footer .foot_bottom .f_link ul li a:hover {
+    border-bottom: 1px solid #fff;
+}
+.wrap .footer .foot_bottom .f_info {
+    font-size: 14px;
+    line-height: 25px;
+    margin-top: 30px;
+    color: #aaa;
+}
+.wrap .footer .foot_bottom .copyright {
+    font-size: 14px;
+    line-height: 21px;
+    margin-top: 20px;
+    color: #aaa;
+}
+.wrap .footer .foot_top .brand_site {
+    margin-left: 50px;
+}
+
+.wrap .footer .foot_top .brand_site > .tit {
+    font-size: 16px;
+    font-weight: 600;
+    padding: 14px 100px 14px 30px;
+    cursor: pointer;
+    color: #aaa;
+    border-radius: 25px;
+    background: #666 url(../img/common/down.png);
+    background-repeat: no-repeat;
+    background-position: 85% 18px;
+}
+.wrap .footer .foot_top .brand_site .brand_open {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: none;
+    width: 330px;
+    padding: 20px 30px;
+    border-radius: 25px;
+    background: #666;
+}
+.wrap .footer .foot_top .brand_site .brand_open > .tit {
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 15px;
+    padding-top: 15px;
+    color: #fff;
+    border-top: 1px solid #fff;
+    background: #666 url(../img/common/down_w.png);
+    background-repeat: no-repeat;
+    background-position: 95% 20px;
+}
+.wrap .footer .foot_top .brand_site .brand_open ul li a {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 35px;
+    color: #fff;
+}
+.wrap .footer .foot_top .brand_site .brand_open ul li {
+    float: left;
+    width: 50%;
+}
+.wrap .footer .foot_top .brand_site .brand_open ul:after {
+    display: block;
+    clear: both;
+    content: '';
+}
+/* gnb */
+.gnb_wrap {
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    width: 100%;
+    min-width: 1280px;
+    background: #fff;
+}
+.gnb_wrap .gnb_top {
+    padding: 10px 80px;
+}
+.gnb_wrap .gnb_top:after {
+    display: block;
+    clear: both;
+    content: '';
+}
+.gnb_wrap .gnb_top ul {
+    display: flex;
+    float: right;
+
+    align-content: center;
+}
+.gnb_wrap .gnb_top ul li + li {
+    margin-left: 15px;
+}
+.gnb_wrap .gnb_top ul li a {
+    font-size: 14px;
+    font-weight: 400;
+    color: #666;
+}
+.gnb_wrap .gnb_top ul li + li:before {
+    position: absolute;
+    top: 5px;
+    left: -8px;
+    display: inline-block;
+    width: 2px;
+    height: 2px;
+    content: '';
+    border-radius: 5px;
+    background: #666;
+}
+.gnb_wrap .gnb_top ul li a:hover{
+  border-bottom:1px solid #333;
+}
+.gnb_wrap .gnb_top ul li a.point01 {
+    font-weight: 600;
+    color: #ed1c24;
+}
+.gnb_wrap .gnb_top ul li a.point01:hover {
+  border-bottom:1px solid #ed1c24;
+  }
+.gnb_wrap .gnb_bottom {
+
+    padding: 30px 80px;
+    border-top: 1px solid #eee;
+
+
+}
+.gnb_wrap .gnb_bottom .gnb_bottom_in {
+    display:flex;
+    align-items: center;
+}
+.gnb_wrap .gnb_bottom.on:after {
+    position: absolute;
+    z-index: -1;
+    bottom: -250px;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 250px;
+    content: '';
+    background: #fafafa;
+}
+.depth_02 {
+    position: absolute;
+    top: 70px;
+    display: none;
+    width: 100%;
+}
+.depth_02 > li {
+    line-height: 45px;
+}
+.depth_02 > li > a {
+    font-size: 16px;
+    letter-spacing: -2px;
+    color: #3b302f;
+    border-bottom: 1px solid #fafafa;
+}
+.depth_02 > li > a:hover {
+    border-bottom: 1px solid #3b302f;
+}
+.gnb {
+    text-align: center;
+
+    flex: 1;
+}
+.gnb > ul {
+    display: inline-block;
+}
+.gnb > ul > li {
+    float: left;
+}
+.gnb > ul > li > a {
+    font-size: 18px;
+    font-weight: 600;
+    padding: 0 20px;
+    color: #3b302f;
+}
+.gnb > ul > li > a .olympiad {
+    display: inline-block;
+    padding-left: 42px;
+    color: #b7976b;
+}
+.gnb > ul > li > a:active {
+    color: #ed1c24;
+}
+.gnb > ul > li > a .olympiad:before {
+    position: absolute;
+    top: -3px;
+    left: 0;
+    display: inline-block;
+    width: 30px;
+    height: 24px;
+    content: '';
+    background: url(../img/common/ic_olympiad.png);
+}
+.gnb > ul > li + li {
+    margin-left: 20px;
+}
+.gnb > ul > li:last-child > a:after {
+    position: absolute;
+    z-index: -1;
+    bottom: -3px;
+    left: 20px;
+    display: inline-block;
+    width: 180px;
+    height: 14px;
+    content: '';
+    border-radius: 300px;
+    background: #f8eee2;
+}
+.gnb > ul > li:last-child > ul > li > a {
+    color: #b7976b;
+}
+.gnb > ul > li:last-child > ul > li > a:hover {
+    border-bottom: 1px solid #b7976b;
+}
+.gnb > ul:after {
+    display: block;
+    clear: both;
+    content: '';
+}
+.right_menu ul {
+    display: flex;
+
+    align-content: center;
+}
+.right_menu > ul > li + li {
+    margin-left: 40px;
+}
+.btn_wrap .basic {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 60px;
+    display: inline-block;
+    width: 280px;
+    height: 60px;
+    transition: all ease .2s;
+    text-align: center;
+    color: #ed1c24;
+    border: 2px solid #ed1c24;
+    border-radius: 30px;
+}
+.btn_wrap .basic:hover {
+    transition: all ease .2s;
+    color: #3b302f;
+    border: 2px solid #3b302f;
+}
+.btn_wrap .prdview_btn {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 60px;
+    display: inline-block;
+    width: 192px;
+    height: 60px;
+    transition: all ease .2s;
+    text-align: center;
+    color: #fff;
+    border-radius: 30px;
+    background: #ed1c24;
+}
+.btn_wrap .prdview_btn:hover {
+    transition: all ease .2s;
+    background: #3b302f;
+}
+
+.btn_wrap .community_btn {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 60px;
+    display: inline-block;
+    width: 170px;
+    height: 60px;
+    transition: all ease .2s;
+    text-align: center;
+    color: #333;
+    border: 2px solid #333;
+    border-radius: 30px;
+}
+.btn_wrap .community_btn:hover {
+    transition: all ease .2s;
+    color: #ed1c24;
+    border: 2px solid #ed1c24;
+}
+
+.btn_wrap .compare_btn {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 60px;
+    display: inline-block;
+    width: 180px;
+    height: 60px;
+    transition: all ease .2s;
+    text-align: center;
+    color: #fff;
+    border-radius: 100px;
+    background: #ed1c24;
+}
+.btn_wrap .compare_btn:hover {
+    transition: all ease .2s;
+    background: #3b302f;
+}
+input[type='radio'], input[type='checkbox'] {
+    font-size: 0;
+    line-height: 0;
+    /*display:block;*/position: absolute;
+    overflow: hidden;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;;
+}
+
+input[type='radio'], input[type='checkbox'] {
+    font-size: 0;
+    line-height: 0;
+    /*display:block;*/position: absolute;
+    overflow: hidden;
+    width: 0;
+    height: 0;
+    margin: 0;
+    padding: 0;;
+}
+input[type='checkbox'] + label > span {
+    vertical-align: top;
+}
+
+input[type='radio'] + label > span {
+    vertical-align: middle;
+}
+input[type='checkbox'] + label:before {
+    position: relative;
+    display: inline-block;
+    width: 17px;
+    height: 17px;
+    margin-right: 15px;
+    content: '';
+    vertical-align: middle;
+    background: url(../img/common/Checkbox_off.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 17px;
+}
+input[type='checkbox']:checked + label:before {
+    background: url(../img/common/Checkbox_on.png);
+    background-size: 17px;
+
+}
+
+input[type='checkbox']:disabled + label:before {
+    background: url(/paulmade/resources/img/front/mo/ko/common/M_check_dis.png);
+    background-size: 17px;
+}
+
+
+input[type='checkbox'] + label > span {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 21px;
+    display: inline-block;
+    color: #444;
+}
+input[type='checkbox']:disabled + label > span {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    display: inline-block;
+    color: #d6d6d6;
+}
+.location{background:#FAFAFA; display:flex; align-items: center; padding:0 80px;}
+.location > div{padding:0 35px;}
+.location > div + div:before{content:''; display:inline-block; width:1px; height:20px; background:#a8a8a8; position:absolute; left:0; top:24px;}
+.location .loca_home > a{width:19px; height:19px; display:block; background:url(../img/common/loca_home.png);}
+.location .loca_sel{width:210px; cursor:pointer; padding:25px 35px;}
+.location .loca_arrow{display:inline-block; width:9px; height:5px; background:url(../img/common/loca_arrow.png); position:absolute; right:35px; top:50%; margin-top:-3px;}
+.location .hidden_loca{}
+.location .hidden_div{
+    width:calc(100% - 20px) ;  position:absolute; left:10px; top:65px; background:#fff; z-index:1;
+
+display:none;
+}
+.location .hidden_div .hidden_loca{
+    margin-top:10px;
+padding:18px 25px;
+border: 1px solid #AAAAAA;
+box-sizing: border-box;
+border-radius: 10px;
+}
+.location .hidden_loca li a{color: #666666; font-size:16px; line-height:40px; font-weight:400;}
+.share_btn > span{display:block; width:35px; height:35px; background:url(../img/common/share_off.png); cursor:pointer;}
+.share_btn > span.on{display:block; width:35px; height:35px; background:url(../img/common/share_on.png);}
+.hidden_share{
+
+    padding:15px 25px;
+    border: 1px solid #DDDDDD;
+box-sizing: border-box;
+border-radius: 25px;
+display:none;
+position:absolute;
+left:36px;
+top:50%;
+margin-top:-30px;
+}
+.hidden_share ul{
+    display:flex;
+    align-items:center;
+}
+.hidden_share ul li span{display:block; vertical-align:top;}
+.hidden_share ul li + li {margin-left:17px;}
+.hidden_share ul li span.twi{width:24px; height:20px; background:url(../img/common/twitter.png); background-repeat:no-repeat; }
+.hidden_share ul li span.face{width:12px; height:22px; background:url(../img/common/face.png); background-repeat:no-repeat; }
+.hidden_share ul li span.insta{width:27px; height:27px; background:url(../img/common/insta.png); background-repeat:no-repeat; }
+.share_btn{display:inline-block;}
