--- a/noonno/resource/css/reset.css
+++ b/noonno/resource/css/reset.css
@@ -340,10 +340,12 @@ table {
 /* Input - color setting */
 /* Button - color setting */
 /** BASE SETTING */
+.guide_section + .guide_section{margin-top:100px;}
 .guide_tit {
     font-size: 30px;
     margin: 70px 0 30px 0;
 }
+.guide_desc{border-top:1px solid #000; padding-top:50px;}
 .guide_tit:first-child {
     margin-top: 0;
 }
