--- a/noonno/resource/css/member_service.css
+++ b/noonno/resource/css/member_service.css
@@ -39,7 +39,7 @@
   cursor:pointer;
 }
 .member-wrap .member_tabcon li .player {
-  position: relative;
+  position: absolute;
   top: 0;
   width: 98%;
   height: 98%;
