--- a/noonno/resource/css/member_service.css
+++ b/noonno/resource/css/member_service.css
@@ -96,9 +96,20 @@ font-family:'Noto Sans KR', sans-serif;padding:0px 10px;letter-spacing:-2px;text
 
 
 /* growth_slide */
+.growth-slider-wrap{
+  position:relative;
+}
+.growth-slider-wrap .bg1{
+  width:100%;
+  height:36%;
+  position: absolute;
+  bottom: 0;
+  background:#fafafa;
+}
 .growth-slider-wrap .growth-slide .swiper-slide{
   background:#fff;
   width:780px;
+  height:438px;
 }
 .growth-slider-wrap .growth-slide img{
   max-width:100%;
@@ -127,6 +138,7 @@ font-family:'Noto Sans KR', sans-serif;padding:0px 10px;letter-spacing:-2px;text
   width:70px;
   height:70px;
   background-size:70px;
+  margin-top:-50px;
 }
 .growth-slider-wrap .growth-slider_arrow .swiper-button-next{
   background-image: url(../../resource/img/growth_next.png);
