--- a/noonno/resource/css/common_kim.css
+++ b/noonno/resource/css/common_kim.css
@@ -450,7 +450,7 @@ input[type='checkbox'] + label > span {
 input[type='radio'] + label > span {
     vertical-align: middle;
 }
-input[type='checkbox'] + label:before {
+/* input[type='checkbox'] + label:before {
     position: relative;
     display: inline-block;
     width: 17px;
@@ -467,18 +467,55 @@ input[type='checkbox']:checked + label:before {
     background: url(../img/common/Checkbox_on.png);
     background-size: 17px;
 
-}
+} */
 
+input[type='checkbox'] + label:before {
+    position: absolute;
+    left:0;
+    display: inline-block;
+    width: 17px;
+    height: 17px;
+    margin-right: 15px;
+    content: '';
+    vertical-align: middle;
+    background: url(../img/common/Checkbox_off.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 17px;
+}
+input[type='checkbox'] + label:after {
+    position: absolute;
+    left: 0;
+    display: inline-block;
+    width: 17px;
+    height: 17px;
+    margin-right: 15px;
+    content: '';
+    vertical-align: middle;
+    background: url(../img/common/Checkbox_on.png);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 17px;
+    opacity:0;
+    transition: all 0.2s cubic-bezier(1, 0, 0, 1);
+    -webkit-transition: all 0.2s cubic-bezier(1, 0, 0, 1);
+    -moz--webkit-transition: all 0.2s cubic-bezier(1, 0, 0, 1);
+    -ms--webkit-transition: all 0.2s cubic-bezier(1, 0, 0, 1);
+
+}
+input[type='checkbox']:checked + label:after {
+    opacity:1;
+}
 input[type='checkbox']:disabled + label:before {
     background: url(/paulmade/resources/img/front/mo/ko/common/M_check_dis.png);
     background-size: 17px;
 }
-
+.check_box label{padding-left:24px;}
 
 input[type='checkbox'] + label > span {
     font-size: 16px;
     font-weight: 500;
-    line-height: 21px;
+    line-height: 16px;
     display: inline-block;
     color: #444;
 }
